--- a/src/components/main/side-menu.component/side-menu.component.css
+++ b/src/components/main/side-menu.component/side-menu.component.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   text-align: start;
+  flex-grow: 1;
 }
 .SideMenu__list {
   border-bottom: 1px solid rgb(247, 247, 247);
@@ -33,4 +34,16 @@
   color: rgb(152, 169, 224);
   transition: 300ms;
   cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  .SideMenu__list {
+    width: 150px;
+  }
+}
+
+@media (max-width: 600px) {
+  .SideMenu__list {
+    width: 100px;
+  }
 }
