--- a/src/components/main/main-body.component/main-body.component.css
+++ b/src/components/main/main-body.component/main-body.component.css
@@ -5,6 +5,18 @@
   justify-content: center;
 }
 
+@media (max-width: 800px) {
+  .MainBody {
+    width: 80%;
+  }
+}
+
+@media (max-width: 600px) {
+  .MainBody {
+    width: 60%;
+  }
+}
+
 .MainBody__container-panels {
   display: flex;
   max-width: 1620px;
