--- a/src/components/main/main-catalog.component/main-catalog.component.css
+++ b/src/components/main/main-catalog.component/main-catalog.component.css
@@ -1,7 +1,7 @@
 .MainCatalog {
   /* background-color: rgb(255, 255, 255); */
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
 
