--- a/src/components/main/main-header.component/main-header.component.css
+++ b/src/components/main/main-header.component/main-header.component.css
@@ -19,84 +19,23 @@
   color: rgb(45, 45, 45);
 }
 
-/* .MainHeader__container-catalog {
-  width: 150px;
-  height: 50px;
-
-  border-radius: 0.3rem;
-  background-color: rgb(113, 136, 212);
-  display: flex;
-  justify-content: space-between;
-}
-.MainHeader__container-catalog:hover {
-  background-color: rgb(128, 149, 217);
-  cursor: pointer;
-}
-
-.MainHeader__container-catalog-burger-container {
-  width: 50px;
-  height: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 0.3rem;
-}
-
-.MainHeader__container-catalog-burger-1 {
-  width: 20px;
-
-  border: 1px solid rgb(255, 255, 255);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  gap: 15px;
-  position: relative;
-} */
-
-/* .MainHeader__container-catalog-burger-2 {
-  width: 20px;
-  border: 1px solid rgb(255, 255, 255);
-
-  transition: 300ms;
-}
-
-.MainHeader__container-catalog-burger-3 {
-  width: 20px;
-  border: 1px solid rgb(255, 255, 255);
-
-  transition: all 300ms;
-} */
-/* .MainHeader__container-catalog-burger-2.hidden {
-  opacity: 0;
-  transition: 300ms;
-}
-
-.MainHeader__container-catalog-burger-1.active {
-  transform: translateY(350%) rotate(45deg);
-  transition: 300ms;
-}
-
-.MainHeader__container-catalog-burger-3.active {
-  transform: translateY(-350%) rotate(-45deg);
-
-  transition: 300ms;
-} */
-
 .MainHeader__container-search {
-  width: 900px;
+  width: 100%;
+  max-width: 900px;
+
   height: 50px;
   display: flex;
+
   /* border: 1px solid black; */
 }
 
 .MainHeader__container-search input {
-  width: 850px;
+  /* max-width: 850px; */
+  width: 100%;
   border-radius: 10px 0 0 10px;
   border: 1px solid rgb(128, 128, 128);
   padding: 1rem;
+  box-sizing: border-box;
 }
 .MainHeader__container-search-button {
   width: 50px;
